[package]
name = "ply_tokio_redis_mongodb"
version = "0.1.0"
edition = "2021"
description = "Implementation of ply for the technology combination of Redis and MongoDB"
license-file = "LICENSE"

[dependencies]
# No references to workspace here because the goal is to extract ply into an open source crate
thiserror = "1"
futures-util = "0.3"
redis = { version = "0.23.2", features = ["tokio-comp"] }
r2d2_redis = "0.14.0"
tokio = { version = "1.0", features = ["sync","time"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [] }
log = "0.4.20"
