[package]
name = "ply_tokio_redis_mongodb"
version = "0.1.1"
edition = "2021"
description = "Implementation of ply for the technology combination of Redis and MongoDB"
license = "MIT-0"

[dependencies]
thiserror = "1"
futures-util = "0.3"
redis = { version = "0.23.2", features = ["tokio-comp"] }
r2d2_redis = "0.14.0"
tokio = { version = "1.0", features = ["sync","time"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [] }
log = "0.4.20"
simple_logger = "4.2.0"
ply_jobs = { version = "0.1.3", features = ["mongodb"] }
#ply_jobs = { path = "../jobs-rust-tokio", features = ["mongodb"] }
async-trait = "0.1.75"
mongodb = "2.6.0"

[dev-dependencies]
reqwest = "0.11.23"
